WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50501
Postpone gl delete* calls until shaders/programs are no longer attached
https://bugs.webkit.org/show_bug.cgi?id=50501
Summary
Postpone gl delete* calls until shaders/programs are no longer attached
Zhenyao Mo
Reported
2010-12-03 15:55:48 PST
By doing this, chromium command buffer won't have to change its behavior and will pass the conformance test
Attachments
patch
(9.21 KB, patch)
2010-12-03 16:05 PST
,
Zhenyao Mo
kbr
: review+
zmo
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2010-12-03 16:05:55 PST
Created
attachment 75571
[details]
patch Manually ran chrome with command buffer, object-deletion-behavior.html is passing with this patch.
Kenneth Russell
Comment 2
2010-12-06 14:21:06 PST
Comment on
attachment 75571
[details]
patch The changes look good, but do the existing layout tests sufficiently cover these code paths?
Zhenyao Mo
Comment 3
2010-12-06 14:38:31 PST
We have object-deletion-behavior.html checked into LayoutTests, which covers this deletion code path.
Kenneth Russell
Comment 4
2010-12-06 14:39:43 PST
Comment on
attachment 75571
[details]
patch OK.
Zhenyao Mo
Comment 5
2010-12-06 15:17:24 PST
Committed
r73406
: <
http://trac.webkit.org/changeset/73406
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug